# master_project

./: .gitignore  CMakeLists.txt  LsaEstimator.cpp  LsaEstimator.h  MfccProcessor.cpp  MfccProcessor.h  NoiseEstimator.cpp  NoiseEstimator.h  README.md  SpecSubEstimator.cpp  SpecSubEstimator.h  Wave.cpp  Wave.h  WaveProcessor.cpp  WaveProcessor.h  main.cpp
